@@ -141,6 +141,8 @@ Applications
    type features.
  * Added new application VMSayName that will play the recorded name of the voicemail
    user if it exists, otherwise will play the mailbox number.
+ * Added custom device states to ConfBridge bridges.  Use 'confbridge:<name>' to
+   retrieve state for a particular bridge, where <name> is the conference name
 
 Dialplan Functions
 ------------------
